--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main  # or your default branch
+    branches: [main]
 
 permissions:
   contents: read
@@ -14,13 +13,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Upload GitHub Pages artifact
+      - name: Upload static site
         uses: actions/upload-pages-artifact@v1
         with:
-          path: .  # assumes index.html and assets are in root
+          path: .  # Adjust if your index.html is in a subfolder
 
   deploy:
     needs: build
@@ -31,4 +30,5 @@ jobs:
 
     steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v2
